--- a/finalprojectab/bookstore/templates/book_details.html
+++ b/finalprojectab/bookstore/templates/book_details.html
@@ -1,7 +1,16 @@
-<html>
-    <head>Book</head>
-
-    {%for x in slug_book%}
-    {{x.title}}
-    {%endfor%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>book details</title>
+</head>
+<body>
+    {{book_details.name}}
+    <br>
+    {{book_details.description}}
+    <br>
+    {{author.Author_name}}
+</body>
 </html>
