--- a/finalprojectab/bookstore/templates/greeting.html
+++ b/finalprojectab/bookstore/templates/greeting.html
@@ -1,3 +1,17 @@
-<html>
-    <head> GREETING </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>greeting</title>
+</head>
+<body>
+    <h1> Welcome to ABook store !</h1>
+    <ul>
+        <li><a href="/bookstore/all_books/">view all the books </a></li>
+        <li><a href="/bookstore/available_books/">view all the available books </a></li>
+        <li><a href="/bookstore/unavailable_books/">view all the unavailable books </a></li>
+    </ul>
+</body>
 </html>
