--- a/finalprojectab/bookstore/templates/book_details.html
+++ b/finalprojectab/bookstore/templates/book_details.html
@@ -17,19 +17,19 @@
 {% if review %}
 <h2>Review:</h2>
 <ul>
-    {% for c in book.review_set.all %}
+    {% for c in books.review_set.all %}
     <li>
         {{ c.review }} by {{ c.author }} posted {{ c.created_on|timesince }} ago
     </li>
 <br>
-    the post is : {{ c.book.title }}
+    the post is : {{ c.books.title }}
     {% endfor %}
 </ul>
 {% else %}
 <h4>No reviews yet..</h4>
 {% endif %}
 
-<form action="" method="post">
+<form action="" method="books">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Add Review">
