Contact us model + form

--- a/finalprojectab/bookstore/templates/greeting.html
+++ b/finalprojectab/bookstore/templates/greeting.html
@@ -1,7 +1,3 @@
-<<<<<<< Updated upstream
-<html>
-    <head> GREETING </head>
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,6 +19,7 @@
         {{form.as_p}}
         <input type="submit" value="request">
     </form>
+
+    <a href="/bookstore/contact_us/">Contact Us</a>
 </body>
->>>>>>> Stashed changes
 </html>
