--- a/finalprojectab/bookstore/templates/books_list.html
+++ b/finalprojectab/bookstore/templates/books_list.html
@@ -18,7 +18,7 @@
         {% for x in all_books_list %}
             <tr>
                 <td>{{ x.category }}</td>
-                <td>{{ x.name }}</td>
+                <td><a href="/bookstore/book/{{x.slug}}">{{ x.name }}</a></td>
                 <td>{{ x.description }}</td>
                 <td>{{ x.price }}</td>
                 <td >{{ x.available }}</td>
