--- a/finalprojectab/bookstore/templates/book_details.html
+++ b/finalprojectab/bookstore/templates/book_details.html
@@ -2,24 +2,22 @@
 <head>
 </head>
     <body>
-        <table border=1>
+        <table border=1 >
             <tr>
                 <td colspan=6 align="center">
-                    <h2>BOOKS</h2>
+                    <h2>{{ slug_book.name }}</h2>
                 </td>
             </tr>
             <tr>
                 <td align="center" >Category</td>
-                <td align="center">Name</td>
                 <td align="center">Description</td>
                 <td align="center">Price</td>
                 <td align="center">available</td>
             </tr>
             <tr>
                 <td>{{ slug_book.category }}</td>
-                <td>{{ slug_book.name }}</td>
                 <td>{{ slug_book.description }}</td>
-                <td>{{ slug_book.price }}</td>
+                <td>${{ slug_book.price }}</td>
                 <td>{{ slug_book.available }}</td>
             </tr>
         </table>
