--- a/finalprojectab/bookstore/templates/book_details.html
+++ b/finalprojectab/bookstore/templates/book_details.html
@@ -22,6 +22,6 @@
             </tr>
         </table>
         <BR>
-        
+        <a href="/bookstore/order/"><button>BUY NOW</button></a>
     </body>
 </html>
