--- a/finalprojectab/bookstore/templates/contact_us.html
+++ b/finalprojectab/bookstore/templates/contact_us.html
@@ -12,5 +12,7 @@
         {{form.as_p}}
         <input type="submit" value="request">
     </form>
+    <br>
+    <a href="/bookstore/">BACK</a>
 </body>
 </html>
