--- a/finalprojectab/bookstore/templates/book_details.html
+++ b/finalprojectab/bookstore/templates/book_details.html
@@ -21,6 +21,27 @@
                 <td>{{ slug_book.available }}</td>
             </tr>
         </table>
+        {% if review %}
+<h2>Review:</h2>
+<ul>
+    {% for c in book.review_set.all %}
+    <li>
+        {{ c.review }} by {{ c.author }} posted {{ c.created_on|timesince }} ago
+    </li>
+<br>
+    the post is : {{ c.book.title }}
+    {% endfor %}
+</ul>
+{% else %}
+<h4>No reviews yet..</h4>
+{% endif %}
+
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Add Review">
+</form>
+
         <BR>
             <a href="/bookstore/all_books/">BACK</a>
     </body>
