--- a/finalprojectab/bookstore/templates/thankyou.html
+++ b/finalprojectab/bookstore/templates/thankyou.html
@@ -10,5 +10,7 @@
     <h1> THANK YOU FOR TRUSTING US </h1>
     <h3>Your invoice will be sent through your email</h3>
     <h4>don't forget keep educating yourselfs</h4>
+    <a href="/bookstore/">BACK TO HOME PAGE</a>
+
 </body>
 </html>
