--- a/finalprojectab/bookstore/templates/books_list.html
+++ b/finalprojectab/bookstore/templates/books_list.html
@@ -26,6 +26,6 @@
         {% endfor %}
         </table>
         <BR>
-        
+            <a href="/bookstore/">BACK TO MAIN PAGE</a>
     </body>
 </html>
