--- a/finalprojectab/bookstore/templates/order.html
+++ b/finalprojectab/bookstore/templates/order.html
@@ -12,5 +12,6 @@
         {{form.as_p}}
         <input type="submit" value="ORDER">
     </form>
+    <a href="/bookstore/">BACK TO MAIN PAGE</a>
 </body>
 </html>
