--- a/finalprojectab/bookstore/templates/book_details.html
+++ b/finalprojectab/bookstore/templates/book_details.html
@@ -44,5 +44,7 @@
 
         <BR>
         <a href="/bookstore/order/"><button>BUY NOW</button></a>
+        <br>
+        <a href="/bookstore/all_books">BACK</a>
     </body>
 </html>
