--- a/finalprojectab/bookstore/templates/books_list.html
+++ b/finalprojectab/bookstore/templates/books_list.html
@@ -1,31 +1,82 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/materia/bootstrap.min.css" integrity="sha384-B4morbeopVCSpzeC1c4nyV0d0cqvlSAfyXVfrPJa25im5p+yEN/YmhlgQP/OyMZD" crossorigin="anonymous">
+    <title>Document</title>
 </head>
-    <body>
-        <table border=1 >
-            <tr>
-                <td colspan=6 align="center">
-                    <h2>BOOKS</h2>
-                </td>
-            </tr>
-            <tr>
-                <td align="center" >Category</td>
-                <td align="center">Name</td>
-                <td align="center">Description</td>
-                <td align="center">Price</td>
-                <td align="center">available</td>
-            </tr>
-        {% for x in all_books_list %}
-            <tr>
-                <td>{{ x.category }}</td>
-                <td><a href="/bookstore/book/{{x.slug}}">{{ x.name }}</a></td>
-                <td>{{ x.description }}</td>
-                <td>${{ x.price }}</td>
-                <td >{{ x.available}}</td>
-            </tr>
-        {% endfor %}
-        </table>
-        <BR>
-        <a href="/bookstore/">BACK</a>
-    </body>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+      
+          <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Home
+                  <span class="visually-hidden">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-sm-2" type="text" placeholder="Search">
+              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    <table border=1 >
+        <tr>
+            <td colspan=6 align="center">
+                <h2>BOOKS</h2>
+            </td>
+        </tr>
+        <tr>
+            <td align="center" >Category</td>
+            <td align="center">Name</td>
+            <td align="center">Description</td>
+            <td align="center">Price</td>
+            <td align="center">available</td>
+        </tr>
+    {% for x in all_books_list %}
+        <tr>
+            <td>{{ x.category }}</td>
+            <td><a href="/bookstore/book/{{x.slug}}">{{ x.name }}</a></td>
+            <td>{{ x.description }}</td>
+            <td>${{ x.price }}</td>
+            <td >{{ x.available}}</td>
+        </tr>
+    {% endfor %}
+    </table>
+    <BR>
+    <a href="/bookstore/">BACK</a>
+
+</body>
 </html>
