created base html and edited all htmls

--- a/finalprojectab/bookstore/templates/thankyou.html
+++ b/finalprojectab/bookstore/templates/thankyou.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <h1> THANK YOU FOR TRUSTING US </h1>
     <h3>Your invoice will be sent through your email</h3>
     <h4>don't forget keep educating yourselfs</h4>
     <a href="/bookstore/">BACK TO HOME PAGE</a>
 
-</body>
-</html>
+{%endblock%}
