--- a/finalprojectab/bookstore/templates/book_details.html
+++ b/finalprojectab/bookstore/templates/book_details.html
@@ -1,7 +1,5 @@
-<html>
-<head>
-</head>
-    <body>
+{% extends 'base.html' %}
+{% block content %}
         <table border=1 >
             <tr>
                 <td colspan=6 align="center">
@@ -46,5 +44,4 @@
         <a href="/bookstore/order/"><button>BUY NOW</button></a>
         <br>
         <a href="/bookstore/all_books">BACK</a>
-    </body>
-</html>
+{%endblock%}
