--- a/finalprojectab/bookstore/templates/contact_us.html
+++ b/finalprojectab/bookstore/templates/contact_us.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <form action="" method="post">
         {% csrf_token%}
         {{form.as_p}}
@@ -14,5 +7,4 @@
     </form>
     <br>
     <a href="/bookstore/">BACK</a>
-</body>
-</html>
+{%endblock%}
