--- a/finalprojectab/bookstore/templates/greeting.html
+++ b/finalprojectab/bookstore/templates/greeting.html
@@ -1,12 +1,8 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>greeting</title>
-</head>
-<body>
+{% block content %}
+
     <h1> Welcome to ABook store !</h1>
     <ul>
         <li><a href="/bookstore/all_books/">view all the books </a></li>
@@ -21,5 +17,4 @@
     </form>
 <br>
     <a href="/bookstore/contact_us/">Contact Us</a>
-</body>
-</html>
+{%endblock%}
