--- a/finalprojectab/bookstore/templates/greeting.html
+++ b/finalprojectab/bookstore/templates/greeting.html
@@ -8,6 +8,7 @@
         <li><a href="/bookstore/all_books/">view all the books </a></li>
         <li><a href="/bookstore/available_books/">view all the available books </a></li>
         <li><a href="/bookstore/unavailable_books/">view all the unavailable books </a></li>
+        <li><a href="/bookstore/customers_books/">view all the used books </a></li>
     </ul>
     <h2>Request a book </h2>
     <form action="" method="post">
