--- a/finalprojectab/bookstore/templates/base.html
+++ b/finalprojectab/bookstore/templates/base.html
@@ -37,7 +37,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown change here </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="/bookstore/add_book">add a book</a>
                   <a class="dropdown-item" href="#">Another action</a>
                   <a class="dropdown-item" href="#">Something else here</a>
                   <div class="dropdown-divider"></div>
