--- a/finalprojectab/bookstore/templates/customers_books_list.html
+++ b/finalprojectab/bookstore/templates/customers_books_list.html
@@ -21,6 +21,7 @@
             <td>${{ x.price }}</td>
             <td >{{ x.get_states_display}}</td>
             <td><a href="/bookstore/edit_book/{{x.slug}}/"><button type="button" class="btn btn-primary">EDIT</button></a></td>
+            <td><a href="/bookstore/delete_book/{{x.slug}}/"><button type="button" class="btn btn-primary">DELETE</button></a></td>
         </tr>
     {% endfor %}
     </table>
